Updated 2022.1 WebApp Prerequisites

--- a/Knowledge-Base/Web-Services/2022.1-WebApp-Prerequisites.md
+++ b/Knowledge-Base/Web-Services/2022.1-WebApp-Prerequisites.md
@@ -2,3 +2,5 @@ dotnet-sdk-3.1.416-win-x64.exe
 dotnet-sdk-3.1.416-win-x86.exe
 
 installing the sdk's require webserver reboot!
+
+also, in addition to editing web.config you have to edit RCMCloud.dll.config as well.
