Updated 2022.1 WebApp Prerequisites

--- a/Knowledge-Base/Web-Services/2022.1-WebApp-Prerequisites.md
+++ b/Knowledge-Base/Web-Services/2022.1-WebApp-Prerequisites.md
@@ -4,3 +4,7 @@ dotnet-sdk-3.1.416-win-x86.exe
 installing the sdk's require webserver reboot!
 
 also, in addition to editing web.config you have to edit RCMCloud.dll.config as well.
+
+the location of the leadtools ShellImaging licenses changed:
+
+`update GLOBAL_REGISTRY set VALUE1 = 'C:\sites\rcm-test\ClientApp\dist\insightweb\ShellImaging\Leadtools\LEADTOOLS.lic.txt', VALUE2 = 'C:\sites\rcm-test\ClientApp\dist\insightweb\ShellImaging\Leadtools\LEADTOOLS.lic.key.txt' where REGISTRY_KEY = 'IMAGING_LICENSE_JS'`
